--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
   justify-content: center;
   display: flex;
   height: 100vh;
+  width: 100%;
   font-size: 40px;
   text-align: center;
   font-weight: bolder;
@@ -27,14 +28,14 @@
   margin-top: 24vh;
 }
 .abimg {
-  margin-left: -145vh;
+  margin-left: -150vh;
   margin-top: 30vh;
 }
 .skills {
-  font-size: 40px;
+  font-size: 50px;
   margin-left: 20vh;
-  margin-top: -50vh;
-  margin-bottom: 30vh;
+  margin-top: -70vh;
+  margin-bottom: 100vh;
 }
 
 .socials {
@@ -46,9 +47,9 @@
   color: white;
   display: flex;
   justify-content: center;
-  margin-top: -18vh;
+  margin-top: -95vh;
   margin-bottom: -5vh;
-  margin-left: -65vh;
+  margin-left: -55vh;
 }
 
 .bot {
@@ -60,12 +61,12 @@
   text-transform: capitalize;
   font-weight: bolder;
   margin: 15px 50px;
-  margin-left: 60vh;
+  margin-left: 80vh;
   margin-top: 15vh;
   font-size: 20px;
 }
 .des {
-  margin-left: 60vh;
+  margin-left: 80vh;
   color: black;
   margin-right: 40px;
   margin-top: 25px;
@@ -354,10 +355,11 @@
 }
 .java {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 93px;
   height: 33px;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 6px;
   margin-left: 48vh;
   margin-top: -15px;
   background-color: rgb(36, 122, 89);
@@ -365,110 +367,120 @@
 }
 .htm {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 65px;
   height: 33px;
   margin-left: -0.1vh;
   margin-top: -15px;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 8px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .css {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 50px;
   margin-left: -0.1vh;
   height: 33px;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 8px;
   margin-top: -15px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .react {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 61px;
   height: 33px;
   margin-left: -0.1vh;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 7px;
   margin-top: -15px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .next {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 73px;
   height: 33px;
   margin-left: -0.01vh;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 8px;
   margin-top: -15px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .sql {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 50px;
   height: 33px;
   margin-left: -0.01vh;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 8px;
   margin-top: -15px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .post {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 102px;
-  margin-left: -67vh;
+  margin-left: -73vh;
   height: 33px;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 6px;
   margin-top: 15px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .nod {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 77px;
-  margin-left: -50.5vh;
+  margin-left: -55vh;
   height: 33px;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 8px;
   margin-top: -33px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .boot {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 90px;
-  margin-left: -37.7vh;
+  margin-left: -41.5vh;
   height: 33px;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 10px 0px 8px;
   margin-top: -33px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .tab {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 77px;
   height: 33px;
-  margin-left: -23vh;
-  padding: 2px 10px 0px 10px;
+  margin-left: -25.5vh;
+  padding: 2px 10px 0px 7px;
   margin-top: -33px;
   background-color: rgb(36, 122, 89);
   color: white;
 }
 .lize {
   border-style: solid;
+  border-radius: 7px;
   font-weight: 600;
   width: 89px;
   height: 33px;
-  margin-left: -10.5vh;
-  padding: 2px 10px 0px 10px;
+  margin-left: -12vh;
+  padding: 2px 10px 0px 8px;
   margin-top: -33px;
   background-color: rgb(36, 122, 89);
   color: white;
@@ -560,9 +572,10 @@
 
 .contain {
   border: solid;
+  border-color: blue;
   position: absolute;
   max-width: 500%;
-  top: 150%;
+  top: 160%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding-left: 30px;
@@ -629,15 +642,15 @@
     font-size: 23px;
   }
   .abimg {
-    margin-left: -10vh;
-    margin-top: 30vh;
+    margin-left: 5vh;
+    margin-top: 25vh;
   }
   .skills {
     font-size: 30px;
-    font-size: 40px;
-    margin-left: 10vh;
-    margin-top: -50vh;
-    margin-bottom: 50vh;
+    font-size: 50px;
+    margin-left: 13vh;
+    margin-top: -70vh;
+    margin-bottom: 65vh;
   }
   .softs {
     font-size: 14px;
@@ -789,9 +802,10 @@
   }
   .contain {
     border: solid;
+    border-color: blue;
     position: absolute;
     width: 80%;
-    top: 185%;
+    top: 199%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding-left: 30px;
@@ -803,12 +817,151 @@
     margin-bottom: -2px;
     font-weight: bolder;
   }
+
+  .java {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 93px;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-left: 48vh;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .htm {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 65px;
+    height: 33px;
+    margin-left: -0.1vh;
+    margin-top: -15px;
+    padding: 2px 10px 0px 10px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .css {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 50px;
+    margin-left: -0.1vh;
+    height: 33px;
+    padding: 2px 10px 0px 9px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .react {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 61px;
+    height: 33px;
+    margin-left: -0.1vh;
+    padding: 2px 10px 0px 10px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .next {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 73px;
+    height: 33px;
+    margin-left: -0.01vh;
+    padding: 2px 10px 0px 11px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .sql {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 50px;
+    height: 33px;
+    margin-left: -0.01vh;
+    padding: 2px 10px 0px 10px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .post {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 102px;
+    margin-left: -74.6vh;
+    height: 33px;
+    padding: 2px 10px 0px 11px;
+    margin-top: 15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .nod {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 77px;
+    margin-left: -56.2vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .boot {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 90px;
+    margin-left: -42.1vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .tab {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 77px;
+    height: 33px;
+    margin-left: -25.5vh;
+    padding: 2px 10px 0px 11px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .lize {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 89px;
+    height: 33px;
+    margin-left: -12vh;
+    padding: 2px 10px 0px 12px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
 }
 @media only screen and (max-width: 400px) {
+  .me {
+    height: 100vh;
+    width: 47vh;
+    font-size: 40px;
+  }
   .footer .footerRight {
     font-size: 12px;
     margin-top: 60px;
     margin-right: 8px;
+    width: 47vh;
   }
   .view1 {
     margin-bottom: -20px;
@@ -897,9 +1050,9 @@
   }
   .skills {
     font-size: 30px;
-    margin-left: 10vh;
-    margin-top: -35vh;
-    margin-bottom: 40vh;
+    margin-left: 4vh;
+    margin-top: -42vh;
+    margin-bottom: 43vh;
   }
   .softs {
     font-size: 14px;
@@ -1040,6 +1193,7 @@
   }
   .contain {
     border: solid;
+    border-color: blue;
     position: absolute;
     max-width: 500%;
     top: 189%;
@@ -1047,5 +1201,138 @@
     transform: translate(-50%, -50%);
     padding-left: 30px;
     padding: 30px;
+  }
+
+  .java {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 93px;
+    height: 33px;
+    padding: 2px 10px 0px 6px;
+    margin-left: 50vh;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .htm {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 65px;
+    height: 33px;
+    margin-left: -0.1vh;
+    margin-top: -15px;
+    padding: 2px 10px 0px 8px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .css {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 50px;
+    margin-left: -0.1vh;
+    height: 33px;
+    padding: 2px 10px 0px 8px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .react {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 61px;
+    height: 33px;
+    margin-left: -0.1vh;
+    padding: 2px 10px 0px 7px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .next {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 73px;
+    height: 33px;
+    margin-left: -0.01vh;
+    padding: 2px 10px 0px 8px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .sql {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 50px;
+    height: 33px;
+    margin-left: -0.01vh;
+    padding: 2px 10px 0px 8px;
+    margin-top: -15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .post {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 102px;
+    margin-left: -45.9vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: 15px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .nod {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 77px;
+    margin-left: -33.7vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .boot {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 90px;
+    margin-left: -24.5vh;
+    height: 33px;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .tab {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 77px;
+    height: 33px;
+    margin-left: -13.6vh;
+    padding: 2px 10px 0px 10px;
+    margin-top: -33px;
+    background-color: rgb(36, 122, 89);
+    color: white;
+  }
+  .lize {
+    border-style: solid;
+    border-radius: 7px;
+    font-weight: 600;
+    width: 89px;
+    height: 33px;
+    margin-left: -46vh;
+    padding: 2px 10px 0px 8px;
+    margin-top: 5px;
+    background-color: rgb(36, 122, 89);
+    color: white;
   }
 }
