--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -153,6 +153,10 @@
   }
 }
 @media only screen and (max-width: 400px) {
+  .navbar {
+    height: 60px;
+    width: 47vh;
+  }
   .dropdown_content {
     display: none;
     position: absolute;
