footer right rearranged

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -959,8 +959,8 @@
   }
   .footer .footerRight {
     font-size: 12px;
-    margin-top: 60px;
-    margin-right: 8px;
+    margin-top: 45px;
+    margin-left: -28vh;
     width: 47vh;
   }
   .view1 {
