--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -275,8 +275,9 @@
 }
 .card :hover {
   transform: translate(0px, -2%);
-  box-shadow: rgb(88 88 88) 0px 40px 8px -10px;
+  box-shadow: rgb(88 88 88) -0.1px 40px 2px 11px;
   cursor: pointer;
+  border-radius: 25px;
 }
 
 .cardFonts {
@@ -287,6 +288,7 @@
   font-family: "Seymour One", sans-serif;
   background-color: rgb(15, 243, 243);
 }
+
 .free {
   background-color: rgb(15, 243, 243);
   font-size: 20px;
@@ -300,10 +302,11 @@
   background-color: blue;
   border-radius: 10px;
   color: white;
-  border-color: white;
+  border: none;
   width: 12%;
   height: 50%;
   margin-top: 30px;
+  padding: 10px;
 }
 .view1 a {
   text-decoration: none;
@@ -594,6 +597,52 @@
   animation: spin 3s infinite linear;
   margin-top: 15px;
 }
+.personalProject {
+  margin-left: 18vh;
+  font-size: 20px;
+  margin-top: 70px;
+}
+.homeSession {
+  font-size: 8.5vh;
+  margin-left: 18vh;
+}
+.homeSessionElighten {
+  margin-left: 18vh;
+  margin-bottom: 10vh;
+  font-size: 1.3rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.homeSessionButton {
+  margin-left: 18vh;
+  font-size: 22px;
+  color: white;
+  background-color: blue;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.homeSessionCard {
+  width: 35%;
+  margin-top: -50vh;
+  margin-left: 130vh;
+  margin-bottom: 70vh;
+}
+.homeSessionCardFonts {
+  padding-left: 25px;
+  padding-top: 30px;
+  padding-right: 20px;
+  font-size: 25px;
+  font-family: "Seymour One", sans-serif;
+  background-color: magenta;
+}
+.homeSessionCard :hover {
+  transform: translate(0px, -2%);
+  box-shadow: rgb(88 88 88) -0.1px 40px 2px 11px;
+  cursor: pointer;
+  border-radius: 25px;
+}
+
 @keyframes spin {
   from {
     transform: scale(1.2) rotate(0deg);
@@ -761,6 +810,20 @@
     border-color: blue;
     text-transform: capitalize;
   }
+  .homeSessionCard {
+    width: 35%;
+    margin-top: 10vh;
+    margin-left: 8vh;
+    margin-bottom: 50px;
+  }
+  .homeSessionCardFonts {
+    padding-left: 25px;
+    padding-top: 30px;
+    padding-right: 20px;
+    font-size: 25px;
+    font-family: "Seymour One", sans-serif;
+    background-color: magenta;
+  }
   .chat {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
@@ -895,7 +958,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 102px;
-    margin-left: -68vh;
+    margin-left: -67.5vh;
     height: 33px;
     padding: 2px 10px 0px 11px;
     margin-top: 15px;
