--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -112,6 +112,12 @@
   margin-bottom: 15px;
 }
 
+@media only screen and (max-width: 1000px) {
+  .navbar .leftSide .port {
+    margin-top: -57px;
+    margin-left: 56vh;
+  }
+}
 @media only screen and (max-width: 800px) {
   .navbar .leftSide a {
     font-size: 15px;
@@ -120,6 +126,9 @@
 
 @media only screen and (max-width: 750px) {
   .navbar .leftSide a {
+    font-size: 13px;
+  }
+  .navbar .leftSide .links a {
     font-size: 13px;
   }
 }
