--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -175,6 +175,17 @@
     z-index: 1;
   }
 }
+@media only screen and (max-width: 380px) {
+  .navbar {
+    height: 60px;
+    width: 58vh;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .navbar {
+    width: 70vh;
+  }
+}
 
 /*.navbar a {
   text-decoration: none;
