--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1977,13 +1977,16 @@
     margin-left: -50vh;
   }
   .nod {
-    margin-left: -33.3vh;
+    margin-left: -37.3vh;
   }
   .boot {
-    margin-left: -24vh;
+    margin-left: -27.4vh;
+  }
+  .tab {
+    margin-left: -16vh;
   }
   .lize {
-    margin-left: -4.2vh;
+    margin-left: -5vh;
   }
   .chat {
     font-size: 27.5px;
