--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -644,6 +644,14 @@
   cursor: pointer;
   border-radius: 25px;
 }
+.homeSessionBody {
+  margin-left: 50px;
+}
+.homeSessionHeader {
+  margin-top: 35px;
+  margin-bottom: 30px;
+  font-size: 30px;
+}
 
 @keyframes spin {
   from {
@@ -1308,7 +1316,7 @@
     top: 19%;
     left: 50%;
     margin-left: 12vh;
-    margin-top: -70vh;
+    margin-top: -65vh;
     transform: translate(-50%, -50%);
     padding-left: 30px;
     padding: 30px;
@@ -1717,7 +1725,7 @@
     width: 68vh;
     top: 199%;
     left: 50%;
-    margin-top: -23vh;
+    margin-top: -18vh;
     margin-left: 7vh;
     transform: translate(-50%, -50%);
     padding-left: 30px;
