--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -253,7 +253,7 @@
 }
 
 .projects {
-  margin-top: 50px;
+  margin-top: 20vh;
   font-size: 40px;
   margin-left: 0px;
 }
@@ -264,7 +264,7 @@
   margin-bottom: 70px;
 }
 .card {
-  width: 35%;
+  width: 55vh;
   margin-top: -60vh;
   margin-left: 130vh;
   margin-bottom: 50px;
@@ -311,6 +311,14 @@
 .view1 a {
   text-decoration: none;
   color: white;
+}
+
+.view1 :hover {
+  color: rgb(255, 152, 169);
+}
+.view1 :active {
+  text-decoration: none;
+  color: rgb(0, 255, 0);
 }
 
 .cardBtnL {
@@ -544,6 +552,48 @@
   margin-left: 60%;
   margin-top: -14%;
 }
+
+.typeSession {
+  margin-left: -2px;
+  margin-top: 10vh;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+  font-size: 35px;
+  font-weight: bolder;
+}
+.stakSession {
+  margin-left: -2px;
+  margin-top: 10vh;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  font-size: 35px;
+  font-weight: bolder;
+}
+.livSession {
+  margin-left: -2px;
+  margin-top: 10vh;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  font-size: 35px;
+  font-weight: bolder;
+}
+.sitSession a {
+  text-transform: capitalize;
+  text-decoration: none;
+  font-weight: bold;
+  margin-bottom: 3px;
+  color: orangered;
+}
+
+.stkSession {
+  margin-left: 30%;
+  margin-top: -11.5%;
+}
+.sitSession {
+  margin-left: 60%;
+  margin-top: -14%;
+  margin-bottom: 30vh;
+}
 .gol {
   font-size: 35px;
   font-weight: lighter;
@@ -599,10 +649,11 @@
 .personalProject {
   margin-left: 18vh;
   font-size: 20px;
-  margin-top: 70px;
+  margin-top: 40vh;
+  margin-bottom: 7vh;
 }
 .homeSession {
-  font-size: 8.5vh;
+  font-size: 7.5vh;
   margin-left: 18vh;
 }
 .homeSessionElighten {
@@ -620,12 +671,26 @@
   border-radius: 10px;
   padding: 10px;
 }
-
+.homeSessionButton a {
+  text-decoration: none;
+  color: white;
+}
+.homeSessionButton :hover {
+  color: rgb(255, 152, 169);
+}
+.homeSessionButton :active {
+  text-decoration: none;
+  color: rgb(0, 255, 0);
+}
 .homeSessionCard {
-  width: 35%;
+  width: 55vh;
   margin-top: -50vh;
-  margin-left: 130vh;
-  margin-bottom: 70vh;
+  margin-left: 131vh;
+  margin-bottom: 45vh;
+}
+.homeSessionCard a {
+  text-decoration: none;
+  color: rgb(25, 0, 255);
 }
 .homeSessionCardFonts {
   padding-left: 25px;
@@ -633,17 +698,26 @@
   padding-right: 20px;
   font-size: 25px;
   font-family: "Seymour One", sans-serif;
-  background-color: magenta;
+  background-color: rgb(252, 252, 85);
 }
 .homeSessionCard :hover {
   transform: translate(0px, -2%);
-  box-shadow: rgb(88 88 88) -0.1px -1px 2px 11px;
+  box-shadow: rgb(88 88 88) -0.1px 10px 1px 20px;
   transition-delay: 0s;
   cursor: pointer;
   border-radius: 25px;
 }
+
 .homeSessionBody {
-  margin-left: 50px;
+  margin-left: 35vh;
+  margin-right: 10vh;
+  margin-bottom: 20vh;
+}
+.homeSessionBody1 {
+  font-weight: 300;
+  font-family: Muli;
+  font-size: 1.3rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .homeSessionHeader {
   margin-top: 35px;
@@ -659,6 +733,7 @@
     transform: scale(1.2) rotate(360deg);
   }
 }
+
 @media only screen and (max-width: 800px) {
   .name {
     font-size: 17px;
@@ -818,45 +893,6 @@
     border-color: blue;
     text-transform: capitalize;
   }
-  .personalProject {
-    margin-left: 10vh;
-    font-size: 20px;
-    margin-top: 70px;
-  }
-  .homeSession {
-    font-size: 8.5vh;
-    margin-left: 10vh;
-  }
-  .homeSessionElighten {
-    margin-left: 10vh;
-    margin-bottom: 10vh;
-    font-size: 1.3rem;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .homeSessionButton {
-    margin-left: 10vh;
-    font-size: 22px;
-    color: white;
-    background-color: blue;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-  }
-
-  .homeSessionCard {
-    width: 35%;
-    margin-top: 10vh;
-    margin-left: 8vh;
-    margin-bottom: 50px;
-  }
-  .homeSessionCardFonts {
-    padding-left: 25px;
-    padding-top: 30px;
-    padding-right: 20px;
-    font-size: 25px;
-    font-family: "Seymour One", sans-serif;
-    background-color: magenta;
-  }
   .chat {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
@@ -895,6 +931,91 @@
   .sit {
     margin-left: 2%;
     margin-top: 10%;
+  }
+
+  .homeSessionBody {
+    margin-left: 10vh;
+  }
+  .typeSession {
+    margin-left: -2px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: bolder;
+  }
+  .stakSession {
+    margin-left: -2px;
+    margin-top: 20vh;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: bolder;
+  }
+  .livSession {
+    margin-left: -2px;
+    margin-top: -20vh;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: bolder;
+  }
+  .sitSession a {
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 3px;
+    color: orangered;
+  }
+
+  .stkSession {
+    margin-left: -0.2vh;
+    margin-top: -11.5%;
+  }
+  .sitSession {
+    margin-left: -0.2vh;
+    margin-top: 30vh;
+    margin-bottom: 30vh;
+  }
+
+  .personalProject {
+    margin-left: 10vh;
+    font-size: 23px;
+    margin-top: 30vh;
+    margin-bottom: 3vh;
+  }
+  .homeSession {
+    font-size: 8.5vh;
+    margin-left: 10vh;
+  }
+  .homeSessionElighten {
+    margin-left: 10vh;
+    margin-bottom: 10vh;
+    font-size: 1.3rem;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .homeSessionButton {
+    margin-left: 10vh;
+    font-size: 22px;
+    color: white;
+    background-color: blue;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  .homeSessionCard {
+    width: 55vh;
+    margin-top: 13vh;
+    margin-left: 9vh;
+    margin-bottom: 45vh;
+  }
+  .homeSessionCardFonts {
+    padding-left: 25px;
+    padding-top: 30px;
+    padding-right: 20px;
+    font-size: 25px;
+    font-family: "Seymour One", sans-serif;
   }
   .contain {
     position: absolute;
