--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -303,11 +303,11 @@
   border-radius: 10px;
   color: white;
   border: none;
-  width: 12%;
-  height: 50%;
   margin-top: 30px;
   padding: 10px;
+  font-size: 22px;
 }
+
 .view1 a {
   text-decoration: none;
   color: white;
