--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,7 +71,6 @@
   margin-right: 40px;
   margin-top: 25px;
   font-weight: 300;
-  font-family: Muli;
   font-size: 1.3rem;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -711,6 +710,7 @@
 }
 .homeSessionCard a :hover {
   color: black;
+  text-decoration: none;
 }
 .homeSessionBody {
   margin-left: 35vh;
@@ -718,10 +718,8 @@
   margin-bottom: 20vh;
 }
 .homeSessionBody1 {
-  font-weight: 300;
-  font-family: Muli;
-  font-size: 1.3rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+  font-family: Roboto;
 }
 .homeSessionHeader {
   margin-top: 35px;
