--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -691,9 +691,8 @@
 }
 .homeSessionButton :active {
   text-decoration: none;
-  color: rgb(0, 255, 0);
+  color: white;
 }
-
 .homeSessionButton2 {
   margin-left: -1vh;
   margin-top: 50px;
@@ -709,11 +708,21 @@
   color: white;
 }
 .homeSessionButton2 :hover {
-  color: rgb(255, 152, 169);
+  color: rgb(253, 121, 143);
+  border-radius: 20px;
+}
+.check :hover {
+  background-color: rgb(12, 145, 12);
+  border-radius: 20px;
+  height: 30px;
+  padding-left: 6px;
+  padding-right: 6px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .homeSessionButton2 :active {
   text-decoration: none;
-  color: rgb(0, 255, 0);
+  color: white;
 }
 
 .homeSessionCard {
@@ -1149,7 +1158,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 102px;
-    margin-left: -67.5vh;
+    margin-left: -68.2vh;
     height: 33px;
     padding: 2px 10px 0px 11px;
     margin-top: 15px;
@@ -1917,7 +1926,7 @@
     font-weight: bolder;
   }
 }
-@media only screen and (max-width: 375px) {
+@media only screen and (min-device-width: 200px) and (max-width: 375px) and (-webkit-min-device-pixel-ratio: 2) {
   .contain {
     position: absolute;
     width: 68vh;
@@ -2193,195 +2202,5 @@
   .chat {
     font-size: 24px;
     margin-left: 14vh;
-  }
-}
-
-@media only screen and (max-width: 360px) {
-  .contain {
-    position: absolute;
-    width: 68vh;
-    top: 199%;
-    left: 50%;
-    margin-top: -20vh;
-    margin-left: 9vh;
-    transform: translate(-50%, -50%);
-    padding-left: 30px;
-    padding: 30px;
-  }
-  .des {
-    font-size: 40px;
-    margin-right: -100px;
-  }
-  .helpDes {
-    font-size: 40px;
-    margin-right: -100px;
-  }
-  .homeSessionElighten {
-    font-size: 10px;
-    margin-right: -100px;
-    font-family: Roboto;
-  }
-
-  .homeSessionBody1 {
-    font-size: 30px;
-    margin-right: -100px;
-  }
-  .appImage {
-    margin-left: -14px;
-  }
-  .shadow {
-    box-shadow: rgb(88 88 88) 10px 3px 20px 30px;
-    width: 45vh;
-  }
-  .explain {
-    font-size: 27px;
-    font-weight: bolder;
-  }
-  .skills {
-    margin-top: -52vh;
-    margin-bottom: 60vh;
-  }
-  .footer .footerRight {
-    font-size: 12px;
-    margin-top: 45px;
-    margin-left: -25.5vh;
-    width: 52vh;
-  }
-
-  .java {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 93px;
-    height: 33px;
-    padding: 2px 10px 0px 6px;
-    margin-left: 60vh;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .htm {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 65px;
-    height: 33px;
-    margin-left: -0.1vh;
-    margin-top: -15px;
-    padding: 2px 10px 0px 8px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .css {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 50px;
-    margin-left: -0.1vh;
-    height: 33px;
-    padding: 2px 10px 0px 8px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .react {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 61px;
-    height: 33px;
-    margin-left: -0.1vh;
-    padding: 2px 10px 0px 7px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .next {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 73px;
-    height: 33px;
-    margin-left: -0.01vh;
-    padding: 2px 10px 0px 8px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .sql {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 50px;
-    height: 33px;
-    margin-left: -0.01vh;
-    padding: 2px 10px 0px 8px;
-    margin-top: -15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .post {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 102px;
-    margin-left: -52vh;
-    height: 33px;
-    padding: 2px 10px 0px 10px;
-    margin-top: 15px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .nod {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 77px;
-    margin-left: -38.3vh;
-    height: 33px;
-    padding: 2px 10px 0px 10px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .boot {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 90px;
-    margin-left: -28.1vh;
-    height: 33px;
-    padding: 2px 10px 0px 10px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .tab {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 77px;
-    height: 33px;
-    margin-left: -16.2vh;
-    padding: 2px 10px 0px 10px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .lize {
-    border-style: solid;
-    border-radius: 7px;
-    font-weight: 600;
-    width: 89px;
-    height: 33px;
-    margin-left: -6vh;
-    padding: 2px 10px 0px 8px;
-    margin-top: -33px;
-    background-color: rgb(36, 122, 89);
-    color: white;
-  }
-  .homeSession {
-    font-size: 33px;
-    font-weight: bolder;
   }
 }
