--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1546,15 +1546,6 @@
   .footer {
     width: 70vh;
   }
-  .view1 {
-    margin-bottom: -20px;
-    background-color: blue;
-    border-radius: 10px;
-    color: white;
-    border-color: white;
-    width: 50%;
-    height: 50%;
-  }
   .card {
     width: 60%;
     margin-top: 50px;
@@ -1632,7 +1623,7 @@
     margin-left: 20vh;
   }
   .skills {
-    font-size: 30px;
+    font-size: 40px;
     margin-left: 10vh;
     margin-top: -45vh;
     margin-bottom: 50vh;
@@ -2139,7 +2130,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 102px;
-    margin-left: -58vh;
+    margin-left: -60.5vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: 15px;
@@ -2151,7 +2142,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 77px;
-    margin-left: -42.8vh;
+    margin-left: -45vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
@@ -2163,7 +2154,7 @@
     border-radius: 7px;
     font-weight: 600;
     width: 90px;
-    margin-left: -31.5vh;
+    margin-left: -33vh;
     height: 33px;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
@@ -2176,7 +2167,7 @@
     font-weight: 600;
     width: 77px;
     height: 33px;
-    margin-left: -18.2vh;
+    margin-left: -19.5vh;
     padding: 2px 10px 0px 10px;
     margin-top: -33px;
     background-color: rgb(36, 122, 89);
@@ -2188,7 +2179,7 @@
     font-weight: 600;
     width: 89px;
     height: 33px;
-    margin-left: -58vh;
+    margin-left: -60.5vh;
     padding: 2px 10px 0px 8px;
     margin-top: 5px;
     background-color: rgb(36, 122, 89);
@@ -2482,7 +2473,7 @@
     margin-left: 14vh;
   }
 }
-@media only screen and (max-width: 360px) {
+@media only screen and (max-device-width: 360px) {
   .contain {
     position: absolute;
     width: 68vh;
