--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -515,6 +515,22 @@
   font-size: 50px;
   font-weight: 400;
 }
+.stayFit {
+  margin-left: -2vh;
+  margin-right: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 40px;
+  font-weight: 400;
+}
+.yourRecipe {
+  margin-left: -2vh;
+  margin-right: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 40px;
+  font-weight: 400;
+}
 .brif {
   margin-left: 35vh;
   margin-right: 30vh;
@@ -534,7 +550,7 @@
 .stak {
   margin-left: -2px;
   margin-top: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   text-transform: capitalize;
   font-size: 35px;
   font-weight: bolder;
@@ -604,6 +620,43 @@
   margin-left: 60%;
   margin-top: -14%;
   margin-bottom: 30vh;
+}
+
+.typeRecipe {
+  margin-left: -2px;
+  margin-top: 10vh;
+  margin-bottom: 20px;
+  text-transform: capitalize;
+  font-size: 35px;
+  font-weight: bolder;
+}
+.stkRecipe {
+  margin-left: 30%;
+  margin-top: -11.5%;
+}
+.stakRecipe {
+  margin-left: -2px;
+  margin-top: 8vh;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  font-size: 35px;
+  font-weight: bolder;
+}
+.sitRecipe a {
+  text-transform: capitalize;
+  text-decoration: none;
+  font-weight: bold;
+  margin-bottom: 3px;
+  margin-left: 75rem;
+  color: orangered;
+}
+.livRecipe {
+  margin-left: 75rem;
+  margin-top: -19vh;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  font-size: 35px;
+  font-weight: bolder;
 }
 .gol {
   font-size: 35px;
@@ -1050,6 +1103,43 @@
     margin-left: -0.2vh;
     margin-top: 30vh;
     margin-bottom: 30vh;
+  }
+
+  .typeRecipe {
+    margin-left: -2px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: bolder;
+  }
+  .stkRecipe {
+    margin-left: -0.2vh;
+    margin-top: -11.5%;
+  }
+  .stakRecipe {
+    margin-left: -2px;
+    margin-top: 20vh;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: bolder;
+  }
+  .sitRecipe a {
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 3px;
+    margin-left: -2px;
+    color: orangered;
+  }
+  .livRecipe {
+    margin-left: -2px;
+    margin-top: 10vh;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: bolder;
   }
 
   .personalProject {
