--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .me {
   color: white;
   background-image: url("../public/AIback.gif");
-  background-repeat: no-repeat;
+  background-position: bottom;
   background-size: cover;
   justify-content: center;
   display: flex;
@@ -30,14 +30,14 @@
   margin-top: 24vh;
 }
 .abimg {
-  margin-left: -150vh;
+  margin-left: -60rem;
   margin-top: 30vh;
 }
 .skills {
   font-size: 50px;
-  margin-left: 20vh;
+  margin-left: 21vh;
   margin-top: -70vh;
-  margin-bottom: 100vh;
+  margin-bottom: 170vh;
 }
 
 .socials {
@@ -49,9 +49,9 @@
   color: white;
   display: flex;
   justify-content: center;
-  margin-top: -95vh;
+  margin-top: -92rem;
   margin-bottom: -5vh;
-  margin-left: -55vh;
+  margin-left: 10vh;
 }
 
 .bot {
@@ -63,12 +63,12 @@
   text-transform: capitalize;
   font-weight: bolder;
   margin: 15px 50px;
-  margin-left: 73.5vh;
+  margin-left: 107vh;
   margin-top: 15vh;
   font-size: 20px;
 }
 .des {
-  margin-left: 73.5vh;
+  margin-left: 107vh;
   color: black;
   margin-right: 40px;
   margin-top: 25px;
@@ -872,7 +872,8 @@
     transform: scale(1.2) rotate(360deg);
   }
 }
-@media only screen and (max-width: 800px) {
+
+@media all and (max-width: 1000px) {
   .name {
     font-size: 17px;
     font-weight: bold;
@@ -920,7 +921,6 @@
     margin-top: 25vh;
   }
   .skills {
-    font-size: 30px;
     font-size: 50px;
     margin-left: 13vh;
     margin-top: -70vh;
@@ -1363,7 +1363,7 @@
   }
 }
 
-@media only screen and (min-device-width: 751px) and (max-device-width: 800px) and (max-device-height: 1280px) {
+@media all and (max-device-width: 950px) {
   .contain {
     position: absolute;
     width: 10vh;
@@ -1657,7 +1657,7 @@
   }
 }
 
-@media only screen and (max-width: 413px) {
+@media all and (max-width: 413px) {
   .contain {
     position: absolute;
     width: 68vh;
@@ -1936,7 +1936,7 @@
   }
 }
 
-@media only screen and (min-width: 376px) and (max-width: 390px) and (max-height: 650px) {
+@media all and (min-width: 376px) and (max-width: 390px) and (max-height: 650px) {
   .contain {
     position: absolute;
     width: 70vh;
@@ -2244,7 +2244,7 @@
     font-weight: bolder;
   }
 }
-@media only screen and (min-device-width: 290px) and (max-device-width: 375px) and (max-device-height: 670px) {
+@media all and (min-device-width: 290px) and (max-device-width: 375px) and (max-device-height: 670px) {
   .contain {
     position: absolute;
     width: 68vh;
@@ -2527,7 +2527,7 @@
     margin-left: 14vh;
   }
 }
-@media only screen and (min-device-width: 388px) and (max-device-width: 411px) and (max-device-height: 825px) {
+@media all and (min-device-width: 388px) and (max-device-width: 411px) and (max-device-height: 825px) {
   .contain {
     position: absolute;
     width: 68vh;
@@ -2805,7 +2805,7 @@
     margin-left: 14vh;
   }
 }
-@media only screen and (max-device-width: 360px) and (max-device-height: 640px) {
+@media all and (max-device-width: 360px) and (max-device-height: 640px) {
   .contain {
     position: absolute;
     width: 68vh;
