--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -873,7 +873,7 @@
   }
 }
 
-@media all and (max-width: 1000px) {
+@media all and (max-width: 1000px) and (orientation: landscape) and (orientation: portrait) {
   .name {
     font-size: 17px;
     font-weight: bold;
